--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews</title>
+    <!-- fontawesome -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.css' integrity='sha512-imTMcrMfwTWMwbgH3ComWWGCoDCo2jO1Qrvoa7B/Kcy7MrP5XMojK/Ede5uYofzcYyx4aFXdwzsm1QxdQXZreg==' crossorigin='anonymous'/>
     <!-- stile -->
     <link rel="stylesheet" href="stile/style.css">
 </head>
@@ -13,7 +15,23 @@
             <h1>Our Reviews</h1>
             <span></span>
         </div>
+        <div class="card">
+            <div class="img-container">
+                <img src="images/persona1.jpg" alt="" class="user-image">
+                <span>
+                    <i class="fa-solid fa-quote-right"></i>
+                </span>
 
+            </div>
+            <h3 class="user-name">Martha Watson</h3>
+            <p class="user-role">Web developer</p>
+            <p class="user-review">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque nisi rerum iusto quasi nobis ipsam, eveniet architecto sapiente asperiores, explicabo dolorem, repudiandae porro! Sit, deleniti reprehenderit rerum et ipsam praesentium!</p>
+            <div class="arrow-container">
+                <i class="fa-solid fa-angle-left"></i>
+                <i class="fa-solid fa-angle-right"></i>
+            </div>
+            <button>Surprise Me</button>
+        </div>
 
 
     </div>
