displaying default review

--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
             <span></span>
         </div>
         <div class="card">
-            <div class="img-container">
-                <img src="images/persona1.jpg" alt="" class="user-image">
-                <span>
-                    <i class="fa-solid fa-quote-right"></i>
-                </span>
-            </div>
-            <h3 class="user-name">Martha Watson</h3>
-            <p class="user-role">Web developer</p>
-            <p class="user-review">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque nisi rerum iusto quasi nobis ipsam, eveniet architecto sapiente asperiores, explicabo dolorem, repudiandae porro! Sit, deleniti reprehenderit rerum et ipsam praesentium!</p>
+            <div class="review-container">
+
+                <!-- <div class="img-container">
+                    <img src="images/persona1.jpg" alt="" class="user-image">
+                    <span>
+                        <i class="fa-solid fa-quote-right"></i>
+                    </span>
+                </div>
+                <h3 class="user-name">Martha Watson</h3>
+                <p class="user-role">Web developer</p>
+                <p class="user-review">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque nisi rerum iusto quasi nobis ipsam, eveniet architecto sapiente asperiores, explicabo dolorem, repudiandae porro! Sit, deleniti reprehenderit rerum et ipsam praesentium!</p>
+            -->
             
+            </div>
             
             <div class="arrow-container">
-                <i class="fa-solid fa-angle-left"></i>
-                <i class="fa-solid fa-angle-right"></i>
+                <i id="left-arrow" class="fa-solid fa-angle-left"></i>
+                <i id="right-arrow" class="fa-solid fa-angle-right"></i>
             </div>
             <button>Surprise Me</button>
         </div>
